--- a/public/index.html
+++ b/public/index.html
@@ -72,11 +72,11 @@
       <div class = 'article_thumb' style='background-image: url(https://img-1256541035.cos.ap-shanghai.myqcloud.com/imgs/samuele-errico-piccarini-JEBqFu2AOOA-unsplash.jpg)'></div>
       <div class = 'article_meta  center_y '>
         <time class = 'pale'>March 13, 2020</time>
-        <h3 class = 'article_title'>LeetCode 115. Distinct Subsequences (不同的子序列)</h3>
+        <h3 class = 'article_title'>LeetCode 115. 不同的子序列</h3>
         <div class = 'article_excerpt  visible '>
-        <p>115. 不同的子序列 Difficulty: 困难
+        <p>115. 不同的子序列 (Distinct Subsequences) Difficulty: 困难
 给定一个字符串 **S **和一个字符串 T，计算在 S 的子序列中 T 出现的个数。
-一个字符串的一个子序列是指，通过删除一些（也可以不删除）字 …</p>
+一个字符串 …</p>
         </div>
       </div>
     </a>
