--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,8 @@
         <h3 class = 'article_title'>LeetCode 115. 不同的子序列</h3>
         <div class = 'article_excerpt  visible '>
         <p>115. 不同的子序列 (Distinct Subsequences) Difficulty: 困难
-给定一个字符串 **S **和一个字符串 T，计算在 S 的子序列中 T 出现的个数。
-一个字符串 …</p>
+给定一个字符串 S和一个字符串 T，计算在 S 的子序列中 T 出现的个数。
+一个字符串的一个子序 …</p>
         </div>
       </div>
     </a>
